clusters/homelab/apps/immich/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    gateway.infra.services/allow-routes: "true"
