clusters/homelab/apps/immich/immich-machine-learning.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-machine-learning
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-machine-learning
        app.kubernetes.io/instance: immich
      annotations:
        instrumentation.opentelemetry.io/inject-python: "central"
    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v3.3.0
          ports:
            - containerPort: 3003
          readinessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
            - mountPath: /cache
              name: model-cache
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: immich-model-cache
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-machine-learning
    app.kubernetes.io/instance: immich
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
