clusters/homelab/apps/immich/immich-server.yaml
# NOTE: we use oidc by default.
# To use Username+Password visit: https://immich.klimlive.de/auth/login?autoLaunch=0
# https://docs.immich.app/administration/oauth/#auto-launch
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: immich-server
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immich-server
        app.kubernetes.io/instance: immich
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "central"
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3.2.4
          ports:
            - containerPort: 2283
          readinessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 4Gi
          volumeMounts:
            - mountPath: /data
              name: photos
      volumes:
        - name: photos
          persistentVolumeClaim:
            claimName: immich-photos
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: immich-server
    app.kubernetes.io/instance: immich
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283
