clusters/homelab/apps/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "immich.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          port: 2283
